fix: fix layout shift, class name

--- a/src/frontend/styles/components/writing.pcss
+++ b/src/frontend/styles/components/writing.pcss
@@ -14,7 +14,7 @@
     margin: auto;
   }
 
-  &__left {
+  &__inner-container {
     margin: auto 0;
     display: flex;
     color: var(--color-text-second);
